--- a/themes/wwcomps/assets/css/_contact-us.css
+++ b/themes/wwcomps/assets/css/_contact-us.css
@@ -27,6 +27,7 @@
 .input-field-col textarea{
 	height: 200px;
 	padding-top: 15px;
+	display: block;
 }
 .input-field-col input[type="text"]::placeholder,
 .input-field-col input[type="email"]::placeholder,
@@ -87,57 +88,54 @@
 }
 .qck-lnk-cntrl ul{
 	display: flex;
-	margin: 0 -10px;
+	margin: -10px -10px;
 }
 .qck-lnk-cntrl ul li{
 	max-width: 33.3333%;
 	width: 100%;
-	padding: 0 10px;
-}
-.qck-lnk-items{
-	position: relative;
-	padding-left: 116px;
-}
-.qck-lnk-items:after{
-	position: absolute;
-	content: "";
-	background-image: url('../images/location-ico.png');
-	background-repeat: no-repeat;
-	width: 117px;
-	height: 100%;
-	left: 0;
-    top: 50%;
-    background-position: center center;
-    border: 2px solid #fff;
-    transform: translateY(-50%);
-    -webkit-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
+	padding: 10px 10px;
 }
 .qck-lnk-item{
+	display: flex;
+}
+ .qck-lnk-item-des{
 	background-image: url('../images/cu-qck-lnk-bg.png');
 	min-height: 150px;
 	background-color: #fff;
-	background-position: right center!important;
-	padding: 24px 5px 20px 20px;
+	background-position: right bottom!important;
+	padding: 24px 10px 20px 20px;
+	width: 100%;
+}
+.qck-lnk-img{
+	border: 2px solid #fff;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 116px;
+	margin-right: -1px;
 	position: relative;
 }
-.qck-lnk-item:before{
+.qck-lnk-img:after{
 	position: absolute;
-	content: "";	 
+	content: "";
 	border-right: 16px solid #fff;	 
 	border-top: 15px solid transparent;	 
 	border-bottom: 15px solid transparent;
-	left: -2%;
-    top: 12%;
-    transform: translateX(-50%);
-    -webkit-transform: translateX(-50%);
-    -ms-transform: translateX(-50%);
+	right: 0;
+	top: 24%;
+	margin-right: -1px;
+	transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
 }
-.qck-lnk-cntrl ul li:nth-child(2) .qck-lnk-items:after{
-	background-image: url('../images/phone-icon.png');
+.qck-lnk-img i {
+    display: inline-block;
+    vertical-align: baseline;
+    padding: 0 5px;
+    height: 60px;
 }
-.qck-lnk-cntrl ul li:nth-child(3) .qck-lnk-items:after{
-	background-image: url('../images/mail-icon.png');
+.qck-lnk-img i img{
+	height: 100%;
 }
 .qck-lnk-title{
 	font-size: 24px;
@@ -145,25 +143,25 @@
 	text-transform: uppercase;
 	margin-bottom: 16px;
 }
-.qck-lnk-item address, 
-.qck-lnk-item a{
+.qck-lnk-item-des address, 
+.qck-lnk-item-des a{
 	font-size: 20px;
 	line-height: 1;
 	color: #545050;
 	margin-bottom: 0;
 }
-.qck-lnk-item address a{
+.qck-lnk-item-des address a{
 	line-height: 1.4;
 	text-transform: capitalize;
 }
-.qck-lnk-item a{
+.qck-lnk-item-des a{
 	display: block;
 	padding-bottom: 10px;
 }
-.qck-lnk-item a:hover{
+.qck-lnk-item-des a:hover{
 	color: #175783;
 }
-.qck-lnk-item a:last-child{
+.qck-lnk-item-des a:last-child{
 	padding-bottom: 0;
 }
 .cnt-page-des > span{
