--- a/themes/wwcomps/assets/css/_how-it-works.css
+++ b/themes/wwcomps/assets/css/_how-it-works.css
@@ -203,16 +203,11 @@
 	.page-bnr-desc h3, .page-bnr-desc h3.fl-h3{
 		font-size:17px;
 	}
-		header,footer{
-			overflow: hidden;
-		}
 	.page-bnr-desc{
 		padding-top:45px;
 		padding-left:8px;
 		padding-right:8px;
-	}
-	.page-bnr-desc h3, .page-bnr-desc h3.fl-h3{
-		margin-bottom:0px;
+		max-width: 390px;
 	}
 	.default-page-con ol li, ol li, .page-bnr-desc ol li{
 		padding-bottom:12px;
@@ -225,8 +220,8 @@
 		font-size:13px;
 	}
 	.page-bnr-desc a, .fl-btn {
-	    width: 155px;
-	    font-size: 10px;
+	    width: 170px;
+	    font-size: 12px;
 	    height:45px;
 	}
 	.mobile{
@@ -243,10 +238,25 @@
 	    margin-top: -10px;
 	    margin-left: 0;
 	}
+	.page-bnr-desc > strong{
+	 	font-size:17px;
+	 }
 }
+
 @media(max-width:479px){
-
-}
-@media(max-width:){
-
+	 .default-page-con ol li, ol li, .page-bnr-desc ol li{
+	 	font-size:12px;
+	 }
+	 .page-bnr-desc > strong{
+	 	font-size:14px;
+	 }
+	 .page-bnr-desc h3, .page-bnr-desc h3.fl-h3{
+	 	font-size:15px;
+	 }
+	 .page-bnr-desc h2, .page-bnr-desc h2.fl-h1{
+	 	font-size:26px;
+	 }
+	 .page-bnr-desc ol li:before{
+	 	top:3px;
+	 }
 }
