--- a/themes/wwcomps/assets/css/_page.css
+++ b/themes/wwcomps/assets/css/_page.css
@@ -120,3 +120,57 @@
 	border: 2px solid #fff;
 }
 /*== pagination end ==*/
+
+
+
+
+
+@media (max-width: 1699px){
+	
+}
+
+
+@media (max-width: 1499px) {
+	.slick-slider .slick-dots li button{
+		width: 19px;
+		height: 19px;
+	}
+}
+
+
+@media(max-width: 1399px){
+
+
+}
+
+@media(max-width: 1299px){
+
+}
+
+@media(max-width: 1199px){
+
+
+
+}
+
+@media(max-width: 991px){
+
+}
+
+@media(max-width: 767px){
+
+
+}
+
+@media(max-width: 575px){
+
+}
+
+@media(max-width: 479px){
+
+
+}
+
+@media(max-width: 359px){
+
+}
