--- a/themes/wwcomps/assets/css/_home.css
+++ b/themes/wwcomps/assets/css/_home.css
@@ -164,10 +164,13 @@
 .winners-grd-item-des .hwgid-title{
 	text-transform: uppercase;
 	font-size: 16px;
-	margin-bottom: 6px;
+	margin-bottom: 7px;
 }
 .winners-grd-item-des .hwgid-title a{
 	color: #3A3A3A;
+}
+.winners-grd-item-des .hwgid-title a:hover{
+	color: #1378d4;
 }
 
 .winners-grd-item-des strong{
@@ -182,10 +185,18 @@
 
 .winnersSlider{
 	margin-bottom: 0!important;
-	margin-left: -10px;
-	margin-right: -10px;
+	margin-left: -50px;
+	margin-right: -50px;
+	padding-left: 40px;
+	padding-right: 40px;
 }
 
 .winnersSlideItem{
 	padding: 0 10px 60px;
+}
+
+
+.winnersSlider .slick-prev,
+.winnersSlider .slick-next{
+	margin-top: -70px;
 }
