--- a/themes/wwcomps/assets/css/_page.css
+++ b/themes/wwcomps/assets/css/_page.css
@@ -41,6 +41,47 @@
 .sitemap ol li a:focus{
 	text-decoration: underline;
 }
+.slick-prev{
+	left: 0;
+	background: url(../images/left-arrow.svg)!important;
+	background-repeat: no-repeat;
+	background-size: 100% auto;
+
+}
+.slick-next{
+	right: 0;
+	background: url(../images/right-arrow.svg)!important;
+	background-repeat: no-repeat;
+	background-size: 100% auto;
+}
+
+.slick-prev:hover{
+	left: 0;
+	background: url(../images/left-arrow-hover.svg)!important;
+	background-repeat: no-repeat;
+	background-size: 100% auto;
+
+}
+.slick-next:hover{
+	right: 0;
+	background: url(../images/right-arrow-hover.svg)!important;
+	background-repeat: no-repeat;
+	background-size: 100% auto;
+}
+
+
+.slick-prev,
+.slick-next{
+	width: 19px;
+	height: 37px;
+	z-index: 30;
+}
+.slick-prev:before,
+.slick-next:before{
+	content: none;
+}
+
+
 
 /* ===================== */
 /*== pagination start ==*/
