--- a/themes/wwcomps/assets/css/_live-draws.css
+++ b/themes/wwcomps/assets/css/_live-draws.css
@@ -42,29 +42,21 @@
 	width: 50%;
 	margin-bottom: 20px;
 }
-
+.previous-draws-grids-cntlr > ul > li:nth-child(2n+1){
+	clear: left;
+}
 .prev-grid-item{
 	border-left: 1px solid #b5b6b1;
 	border-right: 1px solid #b5b6b1;
 }
-.pgi-video-fencybox-cntlr{
+.fb-video-embaded{
 	overflow: hidden;
 	position: relative;
 	height: 388px;
 }
-.pgi-video-fencybox-cntlr:hover .pgi-img{
-	transform: scale(1.1);
-	-ms-transform: scale(1.1);
-	-webkit-transform: scale(1.1);
-	-o-transform: scale(1.1);
-}
-.pgi-img{
+.fb-video-embaded iframe{
 	width: 100%;
 	height: 100%;
-	transition: all 0.5s;
-	-ms-transition: all 0.5s;
-	-webkit-transition: all 0.5s;
-	z-index: 5;
 }
 .pgi-video-play-cntlr{
 	position: absolute;
@@ -92,18 +84,19 @@
 	bottom: 0;
 	left: 0;
 	right: 0;
-	padding: 0 15px 0 15px;
+	padding: 12px 15px 12px 15px;
 	display: flex;
 	align-items: center;
 	flex-wrap: wrap;
 	background: rgba(0,0,0,0.4);
+
 }
 .pgi-vdo-fncbx-btm-lft{
 
 }
 .pgi-vdo-fncbx-btm-title{
 	font-size: 20px;
-	margin-bottom: 5px;
+	margin-bottom: 0;
 	line-height: 1;
 	display: block;
 	color: #fff;
@@ -120,6 +113,7 @@
 	color: #fff;
 	font-family: 'LeagueSpartan-Regular';
 	margin-bottom: 0;
+	line-height: 1;
 }
 .pgi-vdo-fncbx-btm-rt{
 	margin-left: auto;
@@ -134,8 +128,11 @@
 }
 .pgi-vdo-fncbx-btm-rt ul li a{
 	color: #fff;
-	font-size: 25px;
+	font-size: 16px;
 	display: inline-block;
+	line-height: 1;
+	padding: 0 4px;
+	border: 1px solid #fff;
 }
 .pgi-vdo-fncbx-btm-rt ul li a:hover{
 	color: #175783;
@@ -144,8 +141,9 @@
 .prev-grid-item-desc{
 	background: #fff;
 	padding: 16px 14px;
+	min-height: 142px;
 }
-.prev-grid-item-sub-title{
+/*.prev-grid-item-sub-title{
 	position: relative;
 	padding: 0 17px;
 	margin-bottom: 14px;
@@ -184,4 +182,4 @@
 	display: block;
 	font-size: ;
 	font-family: ;
-}
+}*/
