--- a/themes/wwcomps/assets/css/_live-draws.css
+++ b/themes/wwcomps/assets/css/_live-draws.css
@@ -55,10 +55,11 @@
 	height: 388px;
 }
 .fb-video-embaded iframe{
-	width: 100%;
-	height: 100%;
+    height: 380px!important;
+    width: 100%!important;
+    min-width: 100%!important;
 }
-.pgi-video-play-cntlr{
+/*.pgi-video-play-cntlr{
 	position: absolute;
 	top: 50%;
 	left: 50%;
@@ -77,8 +78,8 @@
 	border: 2px solid #fff;
 	font-size: 33px;
 	color: #fff;
-}
-
+}*/
+/*
 .pgi-video-fncbx-bottom{
 	position: absolute;
 	bottom: 0;
@@ -142,44 +143,4 @@
 	background: #fff;
 	padding: 16px 14px;
 	min-height: 142px;
-}
-/*.prev-grid-item-sub-title{
-	position: relative;
-	padding: 0 17px;
-	margin-bottom: 14px;
-	line-height: 1;
-	color: #343537;
-	text-transform: capitalize;
-	display: block;
-	font-size: ;
-	font-family: ;
-}
-.prev-grid-item-sub-title:after{
-	background-image: url('../imgaes/prev-grid-item-sub-title-icon.png');
-	position: absolute;
-	left: 0;
-	top: 50%;
-	transform: translateY(-50%);
-	-ms-transform: translateY(-50%);
-	-webkit-transform: translateY(-50%);
-	-o-transform: translateY(-50%);
-}
-.prev-grid-item-sub-title:before{
-	background-image: url('../imgaes/prev-grid-item-sub-title-icon.png');
-	position: absolute;
-	right: 0;
-	top: 50%;
-	transform: translateY(-50%);
-	-ms-transform: translateY(-50%);
-	-webkit-transform: translateY(-50%);
-	-o-transform: translateY(-50%);
-}
-.prev-grid-item-title{
-	margin-bottom: 14px;
-	line-height: 1;
-	color: #343537;
-	text-transform: capitalize;
-	display: block;
-	font-size: ;
-	font-family: ;
 }*/
