--- a/themes/wwcomps/assets/css/_contact-us.css
+++ b/themes/wwcomps/assets/css/_contact-us.css
@@ -224,6 +224,11 @@
 	}
 
 }
+@media(max-width: 785px){
+	.qck-lnk-item-des address a{
+		line-height: 1.1;
+	}
+}
 
 @media(max-width: 767px){
 	
@@ -261,6 +266,11 @@
 	}
 	.qck-lnk-cntrl ul li{
 		max-width: 100%;
+	}
+	.qck-lnk-item{
+		max-width: 425px;
+		width: 100%;
+		margin: 0 auto;
 	}
 	.qck-lnk-item-des address, .qck-lnk-item-des a{
 		font-size: 16px;
