--- a/themes/wwcomps/assets/css/_home2.css
+++ b/themes/wwcomps/assets/css/_home2.css
@@ -41,7 +41,6 @@
 	-o-transform: translateY(-50%);
 }
 .lw-slide-item-title{
-	font-size: 40px;
     font-family: 'LeagueSpartan-Medium';
 	line-height: 1.2;
 	margin-bottom: 45px;
@@ -55,7 +54,6 @@
 }
 .lw-slide-item-sub-title{
 	color: #1C75BC;
-	font-size: 40px;
 	display: block;
 	margin-bottom: 15px;
     font-family: 'LeagueSpartan-Bold';
@@ -80,20 +78,18 @@
 	position: relative;
 	padding-right: 44px;
 }
-.lw-si-prize-cntlr .price i{
+.lw-si-prize-cntlr .price > del{
+	font-size: 17px;
+	font-weight: 400;
+	color: #AAAAAA;
 	position: absolute;
 	right: 0;
 	top: 0;
 }
-.lw-si-prize-cntlr .price > i > del{
-	font-size: 17px;
-	font-weight: 400;
-	color: #AAAAAA;
-}
 .lw-si-prize-cntlr .price .woocommerce-Price-amount bdi{
     font-family: 'LeagueSpartan-Bold';
 	font-size: 34px;
-	color: #1C75BC;
+	color: #009245;
 	padding-left: 10px;
 }
 .counter-up-sec{
@@ -101,16 +97,16 @@
 	padding: 55px 0 25px 0;
 }
 .counter-up-cntlr{
-	padding-left: 25px;
+	padding-left: 10px;
 }
 .counter-up-cntlr ul{
 	display: flex;
 	align-items: center;
 	flex-wrap: wrap;
-	margin: 0 -40px;
+	margin: 0 -30px;
 }
 .counter-up-cntlr ul li{
-	padding: 0 40px;
+	padding: 0 30px;
 	width: 25%;
 	margin-bottom: 30px;
 }
@@ -146,13 +142,15 @@
 	margin-bottom: 0;
 }
 
-.how-to-play-sec{
+.how-to-play-wrap{
 	min-height: 727px!important;
 	padding: 75px 0!important;
+}
+.left-right-desc-item{
 	margin-bottom: 45px;
 }
 .htp-banner-bg{
-
+	
 }
 .htp-banner-bg .bnr-bg-lft{
 	max-width: 65.875%;
@@ -184,15 +182,14 @@
 }
 .htp-desc-title{
 	margin-bottom: 0;
-	font-size: 30px;
 	text-align: center;
-	font-family: 'LeagueSpartan-Regular';
 	color: #fff;
 	line-height: 1;
 	display: block;
+	letter-spacing: 2px;
 }
 .htp-desc-title span{
-	font-family: 'LeagueSpartan-Semibold';
+	font-family: 'LeagueSpartan-Regular';
 }
 
 .htp-sec-desc{
@@ -213,10 +210,9 @@
 }
 .htp-desc-sub-title{
 	font-family: 'LeagueSpartan-Regular';
-	font-size: 26px;
 	color: #3A3A3A;
 	line-height: 1.7;
-	margin-bottom: 20px;
+	margin-bottom: 30px;
 }
 .htp-sec-desc p{
 	margin-bottom: 40px;
