--- a/themes/wwcomps/assets/css/_forest-projects.css
+++ b/themes/wwcomps/assets/css/_forest-projects.css
@@ -14,6 +14,7 @@
 }
 .forest-proj-slide-item-des .counter-up-cntlr{
 	padding-left:0px;
+	position: relative;
 }
 .forest-proj-slide-item-des{
 	padding-bottom:3px;
@@ -21,6 +22,16 @@
 .forest-proj-slide-item-des .counter-item{
 	padding-top:55px;
 	padding-bottom:55px;
+}
+.forest-proj-slide-item-des .counter-up-cntlr > span {
+    position: absolute;
+    transform:translateX(-50%);
+    top: 0;
+    left: 50%;
+    margin-top:-1px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
