--- a/themes/wwcomps/assets/css/_forest-projects.css
+++ b/themes/wwcomps/assets/css/_forest-projects.css
@@ -33,8 +33,29 @@
     justify-content: center;
     align-items: center;
 }
-
-
+.banner-bg-rgt-cntlr {
+  max-width: 65.3%;
+  width:100%;
+}
+.forest-proj-sec .bnr-bg-rgt{
+	max-width:100%!important;
+	width:100%;
+	background-attachment:scroll;
+}
+.forest-proj-sec .lucky-winner-slider,
+.forest-proj-sec .lucky-winner-slider .slick-list,
+.forest-proj-sec .lucky-winner-slider .slick-track,
+.forest-proj-sec .lucky-winner-slider .lw-slide-item-cntlr,
+.forest-proj-sec .lucky-winner-slider .banner-bg,
+.forest-proj-sec .lucky-winner-slider .bnr-bg-lft,
+.forest-proj-sec .lucky-winner-slider .bnr-bg-rgt{
+	height:100%;
+}
+/*.forest-proj-sec .slick-slider ul.slick-dots{
+	position: absolute;
+	top: 0;
+	
+}*/
 
 
 
