--- a/themes/wwcomps/assets/css/_header.css
+++ b/themes/wwcomps/assets/css/_header.css
@@ -209,6 +209,7 @@ nav.main-nav > ul > li.menu-item-has-children ul.sub-menu li a{
 	color: #4B4B4B;
     padding: 5px 20px;
     position: relative;
+    text-transform: uppercase;
 }
 nav.main-nav > ul > li.menu-item-has-children ul.sub-menu li:after {
     position: absolute;
@@ -256,4 +257,309 @@ nav.main-nav > ul > li.menu-item-has-children ul.sub-menu li a:hover{
 	color: #fff;
 	font-size: 12px;
 	font-family: 'LeagueSpartan-Medium';
+}
+
+/*humberger -icon*/
+.humberger-cntlr{
+	padding: 8px;
+	border: 1px solid #019245;
+	display: none;
+	margin-right: 10px;
+}
+.humberger-icon{
+	position: relative;
+	height: 12px;
+	width: 18px;
+}
+.humberger-icon span{
+	position: absolute;
+	top: 0;
+	right: 0;
+	left: 0;
+	height: 2px;
+	background: #019245;
+}
+.humberger-icon span:nth-child(2){
+	top: 5px;
+}
+.humberger-icon span:nth-child(3){
+	top: 10px;
+}
+
+/*mobile menu*/
+/*overlay*/
+.bdoverlay {
+    background: rgba(0, 0, 0, 0.8);
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    opacity: 0;
+    -ms-transition: all 0.3s;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
+    z-index: -1;
+}
+.allWork .bdoverlay {
+    z-index: 9999;
+    opacity: 1;
+}
+body.allWork{
+    overflow: hidden!important;
+}
+
+
+/*humberger icon*/
+.xs-humberger-cntlr{
+    text-align: center;
+    display: none;
+}
+.humberger-icon{
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    height: 14px;
+    width: 16px;
+}
+.humberger-icon span{
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    right: 0;
+    background: #019245;
+    height: 2.5px;
+    border-radius: 50px;
+}
+.humberger-icon span:nth-child(2){
+    top: 5px;
+}
+.humberger-icon span:nth-child(3){
+    top: 10px;
+}
+
+/*mobile menu*/
+.xs-mbl-menu-cntlr{
+   position: fixed;
+   top: 0;
+   right: -375px;
+   bottom: 0;
+   background: #fff;
+   color: #0c0c0c;
+   font-size: 20px;
+   max-width: 375px;
+   width: 0;
+   z-index: 99999;
+   opacity: 0;
+   -ms-transition: all 0.3s;
+   -webkit-transition: all 0.3s;
+   transition: all 0.3s;
+   padding: 0 25px;
+   padding-top: 93px;
+   height: 100%;
+   width: 100%;
+
+}
+.allWork .xs-mbl-menu-cntlr{
+    right: 0;
+   opacity: 1;
+   z-index: 99999;
+   width: 100%;
+}
+.xs-mbl-menu-top-wrap{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: 0 25px;
+}
+.xs-mbl-menu{
+    overflow-y: scroll;
+    height: 100%;
+    width: 100%;
+}
+
+.xs-mbl-menu-top{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    padding: 30px 0;
+}
+
+.xs-mmt-close-icon{
+    margin-left: auto;
+}
+.xs-mmt-logo{
+
+}
+.xs-mmt-logo a{
+    display: inline-block;
+    max-width: 140px;
+}
+
+.close-icon{
+    margin-left: auto;
+    position: relative;
+    height: 12px;
+    width: 18px;
+}
+.close-icon span{
+    position: absolute;
+    content: "";
+    top: 5px;
+    transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    left: 0;
+    right: 0;
+    background: #019245;
+    height: 2.5px;
+    border-radius: 50px;
+}
+.close-icon span:nth-child(2){
+    top: 5px;
+    transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+}
+/*responsive*/
+@media (max-width: 1499px){
+	.hdr-menu{
+		padding-right: 30px;
+	}
+	nav.main-nav > ul{
+		margin: 0 -15px;
+	}
+	nav.main-nav > ul > li{
+		padding: 0 15px;
+	}
+}
+@media (max-width: 1399px){
+	
+}
+@media (max-width: 1299px){
+	
+}
+@media (max-width: 1199px){
+	.hdr-menu{
+		padding-right: 16px;
+	}
+	nav.main-nav > ul{
+		margin: 0 -8px;
+	}
+	nav.main-nav > ul > li{
+		padding: 0 8px;
+	}
+	nav.main-nav > ul > li > a{
+		font-size: 15px;
+	}
+	nav.main-nav > ul > li.menu-item-has-children ul.sub-menu li a{
+		font-size: 15px;
+	}
+}
+@media (max-width: 991px){
+	.header{
+		padding: 11px 0;
+	}
+	.humberger-cntlr{
+		display: block;
+	}
+	.hdr-menu{
+		display: none;
+	}
+
+	/*mobile*/
+	nav.main-nav > ul{
+        margin: 0;
+        padding: 0;
+        display: block;
+        text-align: center;
+        padding: 40px 0;
+    }
+    nav.main-nav > ul > li{
+        line-height: 1;
+        padding: 10px 0;
+    }
+    nav.main-nav > ul > li > a{
+        font-size: 16px;
+        padding-bottom: 0;
+        text-align: center;
+    }
+    nav.main-nav > ul > li > a:after{
+        content: none;
+        display: none;
+    }
+    nav.main-nav > ul > li > a:hover{
+        color: initial;
+    }
+    nav.main-nav > ul > li.menu-item-has-children ul.sub-menu {
+        position: initial;
+        background: transparent;
+        width: 100%;
+        padding:  20px 0 0 0;
+        transition: initial;
+        -ms-transition: initial;
+        -webkit-transition: initial;
+        transform: initial;
+        -ms-transform: initial;
+        -webkit-transform: initial;
+        -o-transform: initial;
+        transform-origin: initial;
+        opacity: 1;
+        display: none;
+    }
+    nav.main-nav > ul > li.menu-item-has-children ul.sub-menu li{
+        border: none;
+    }
+    nav.main-nav > ul > li.menu-item-has-children ul.sub-menu li:after{
+        content: none;
+        display: none;
+    }
+    nav.main-nav > ul > li.menu-item-has-children > a{
+        padding-right: 15px;
+        position: relative;
+
+    }
+    nav.main-nav > ul > li.menu-item-has-children > a:before{
+        content: "\f107"!important;
+        font-family: 'Font Awesome 5 Free';
+        font-weight: 600;
+        text-decoration: inherit;
+        color: #231F20;
+        font-size: 16px;
+        padding-right: 0;
+        position: absolute;
+        top: 1px;
+        right: 0;
+        line-height: 15px;
+        transition: all 0.5s;
+        -ms-transition: all 0.5s;
+        -webkit-transition: all 0.5s;
+        -o-transition: all 0.5s;
+    }
+    nav.main-nav > ul > li.menu-item-has-children.sub-menu-arrow > a:before{
+        color: #019245!important;
+        transform: rotate(-180deg)!important;
+        -ms-transform: rotate(-180deg)!important;
+        -webkit-transform: rotate(-180deg)!important;
+        -o-transform: rotate(-180deg)!important;
+    }
+    nav.main-nav > ul > li.menu-item-has-children ul.sub-menu li a{
+    	font-size: 15px;
+    }
+}
+@media (max-width: 767px){
+	
+}
+@media (max-width: 639px){
+	
+}
+@media (max-width: 575px){
+	
+}
+@media (max-width: 479px){
+	
 }
