--- a/themes/wwcomps/assets/css/_forest-projects.css
+++ b/themes/wwcomps/assets/css/_forest-projects.css
@@ -42,6 +42,35 @@
 	width:100%;
 	background-attachment:scroll;
 }
+.forest-proj-sec{
+	padding-bottom:114px!important;
+}
+.forest-proj-sec .custom_paging li:before{
+	content:none;
+}
+.forest-proj-sec .custom_paging li{
+	color: #fff;
+    width: 46px;
+    height: 46px;
+    background: #c18f54;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    font-weight: 400;
+    font-size: 24px;
+    border: 1px solid #fff;
+    margin: 0 5px;
+}
+.forest-proj-sec .custom_paging{
+	position: absolute;
+	display: flex;
+	bottom:42px;
+	left:0px;
+	margin:0;
+	padding:0;
+	list-style:none;
+}
 .forest-proj-sec .lucky-winner-slider,
 .forest-proj-sec .lucky-winner-slider .slick-list,
 .forest-proj-sec .lucky-winner-slider .slick-track,
@@ -54,7 +83,7 @@
 /*.forest-proj-sec .slick-slider ul.slick-dots{
 	position: absolute;
 	top: 0;
-	
+
 }*/
 
 
