--- a/themes/wwcomps/assets/css/_gallery.css
+++ b/themes/wwcomps/assets/css/_gallery.css
@@ -37,6 +37,12 @@
 	color: #545050;
 	margin-bottom: 10px;
 }
+.gallery-gid-title a{
+	color: #545050;
+}
+.gallery-gid-title a:hover{
+	color: #1d75bd;
+}
 
 .gallery-place,
 .galley-date{
@@ -44,7 +50,7 @@
 	vertical-align: baseline;
 	padding-right: 10px;
 }
-.gallery-place a{
+.gallery-place span{
 	display: inline-block;
 	vertical-align: baseline;
 	padding-left: 17px;
@@ -54,7 +60,7 @@
 	font-weight: 400;
 	position: relative;
 }
-.gallery-place a i{
+.gallery-place span i{
 	position: absolute;
 	top: 50%;
 	left: 0;
@@ -128,13 +134,8 @@
 	-ms-transform: translate(-50%,-50%);
 }
 .gallery-grd-item-overlay-btn a{
-	background: #009245;
-	color: #fff;
 	height: 46px;
 	width: 142px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
 	font-size: 15px;
 	font-weight: 700;
 	text-transform: uppercase;
@@ -143,4 +144,153 @@
 	height: 100%;
 	opacity: 1;
 	z-index: 1;
+}
+
+
+@media (max-width: 1699px){
+	
+}
+
+
+@media (max-width: 1499px) {
+	.gallery-gid-title{
+		font-size: 23px;
+	}
+}
+
+
+@media(max-width: 1399px){
+	.container { max-width: 1100px; }
+
+}
+
+@media(max-width: 1299px){
+	.gallery-gid-title{
+		font-size: 22px;
+	}
+	.gallery-grd-item-img {
+	    min-height: 300px;
+	}
+}
+
+@media(max-width: 1199px){
+	.gallery-gid-title{
+		font-size: 21px;
+	}
+	.gallery-place span,
+	.galley-date span{
+		font-size: 15px;
+	}
+
+
+}
+
+@media(max-width: 991px){
+	.gallery-gid-title{
+		font-size: 20px;
+	}
+	.gallery-sec-bg{
+		padding-top: 70px;
+	}
+	.gallery-sec-ctlr ul li{
+		width: 50%;
+	}
+	.gallery-sec-ctlr ul li:nth-child(3n+1){
+		clear: none;
+	}
+	.gallery-sec-ctlr ul li:nth-child(2n+1){
+		clear: left;
+	}
+	.gallery-grd-item-overlay-btn a{
+		width: 120px;
+		height: 36px;
+		font-size: 12px;
+	}
+}
+
+@media(max-width: 767px){
+	.gallery-sec-bg{
+		padding-top: 50px;
+		padding-bottom: 65px;
+	}
+	.gallery-gid-title{
+		font-size: 18px;
+	}
+	.gallery-place span, 
+	.galley-date span {
+	    font-size: 14px;
+	}
+	
+}
+@media(max-width: 639px){
+	.gallery-sec-ctlr ul{
+		margin-left: 0;
+		margin-right: 0;
+	}
+	.gallery-sec-ctlr ul li{
+		width: 100%;
+		padding-left: 0;
+		padding-right: 0;
+		padding-bottom: 30px;
+	}
+	.gallery-sec-ctlr ul li:nth-child(2n+1){
+		clear: none;
+	}
+	.gallery-grd-item{
+		max-width: 300px;
+		width: 100%;
+		margin: 0 auto;
+		border: 7px solid #fff;
+		overflow: hidden;
+	}
+	.gallery-grd-item-img {
+	    min-height: 250px;
+	}
+	.gallery-triangle{
+		border-left: 30px solid transparent;
+	    border-right: 30px solid transparent;
+	    border-top: 12px solid #fff;
+	}
+	.gallery-grd-item-des{
+		padding: 14px 10px 10px;
+		text-align: center;
+	}
+	.gallery-grd-item-icon{
+		right: -30px;
+		bottom: -30px;
+	}
+	.gallery-place span, .galley-date span {
+	    font-size: 13px;
+	}
+	.gallery-grd-item-overlay-btn a{
+		width: 90px;
+		height: 30px;
+		font-size: 8px;
+	}
+}
+
+@media(max-width: 575px){
+	.gallery-gid-title{
+		font-size: 17px;
+	}
+	.gallery-grd-item-img {
+	    min-height: 225px;
+	}
+	.gallery-place span, .galley-date span {
+	    font-size: 12px;
+	}
+}
+
+@media(max-width: 479px){
+	.gallery-gid-title{
+		font-size: 16px;
+	}
+	.gallery-place span, .galley-date span {
+	    font-size: 11px;
+	}
+
+}
+
+@media(max-width: 359px){
+
 }
