--- a/themes/wwcomps/assets/css/main.css
+++ b/themes/wwcomps/assets/css/main.css
@@ -46,6 +46,8 @@
 @import url('_about-us.css');
 @import url('_faqs.css');
 @import url('_forest-projects.css');
+@import url('_current-competition-entry.css');
+
 
 /*Start of Rannojit*/
 
