--- a/themes/wwcomps/assets/css/_winner.css
+++ b/themes/wwcomps/assets/css/_winner.css
@@ -57,7 +57,6 @@
 	background-repeat: no-repeat;
 	background-repeat: no-repeat;
     background-position: right bottom;
-	padding-top: 45px;
 }
 .body-cont p{
 	font-size: 16px;
@@ -144,6 +143,10 @@
 	}
 	.body-cont{
 		text-align: center;
+		padding: 32px 5px 55px 20px;
+	}
+	.body-cont p{
+		font-size: 12px;
 	}
 }
 
