--- a/themes/wwcomps/assets/css/_faqs.css
+++ b/themes/wwcomps/assets/css/_faqs.css
@@ -20,7 +20,7 @@
 .hh-accordion-tab-row {
     padding-bottom: 30px;
 }
-.hh-accordion-des div p:last-child{
+.faqs-bnr-pg-desc div p:last-child{
 	margin-bottom:0!important;
 }
 .hh-accordion-des{
