--- a/themes/wwcomps/assets/css/_how-it-works.css
+++ b/themes/wwcomps/assets/css/_how-it-works.css
@@ -10,7 +10,7 @@
 .mobile{
 	display: none;
 }
-.page-banner-section .banner-bg{
+.how-it-works-sec .banner-bg{
 	border-bottom:1px solid #7C7C7C;
 }
 .banner-bg{
