--- a/themes/wwcomps/assets/css/_current-competition-entry.css
+++ b/themes/wwcomps/assets/css/_current-competition-entry.css
@@ -34,6 +34,14 @@
     margin-left: -1px;
     margin-top: -1px;
 }
+.current-competition-entry-sec-ctlr .flash-title:after{
+	background: url(../images/page-title-angle-1.png);
+	width: 24px;
+    margin-top: -2px;
+}
+.hh-accordion-active .icon-rotate i{
+	transform:rotate(180deg);
+}
 .current-competition-entry-sec-ctlr .hh-accordion-des{
 	background:#175884;
 	padding-top:78px;
@@ -86,3 +94,4 @@
 	left:70px;
 	margin-top:-3px;
 }
+
