--- a/themes/wwcomps/assets/css/_faqs.css
+++ b/themes/wwcomps/assets/css/_faqs.css
@@ -53,7 +53,7 @@
 .faqs-bnr-pg-desc > span{
 	right:-21px;
 }
-.hh-accordion-active span:after{
+.hh-accordion-active > span:after{
 	transform:rotate(180deg);
 	-ms-transform:rotate(180deg);
 	-webkit-transform:rotate(180deg);
